# Weather-ETL

./: .gitignore  data.json  pyproject.toml
src/api/: api_data.py
